# advent-of-code

./: .gitignore  1-1.py  1-2.py  2-1.py  2-2.py  README.md  d02p1.py  d02p2.py  d03.py  d05.py  input_getter.py  pyproject.toml  requirements.txt
.github/: labeler.yml
.github/workflows/: labeler.yml
.gitignore/: 1-2.py
2019/: input_getter.py
2019/d01/: p02.py  p1.py  p2.py
2019/d02/: p1.py  p2.py
2019/d03/: p01.py  p02.py  p1.py  p2.py
2019/d04/: p02.py  p1.py  p2.py
2019/d05/: p1.py  p2.py
2019/d06/: p1.py  p2.py
2020/d01/: p1.py  p2.py
2020/d02/: p1.py  p2.py
2020/d03/: p1.py  p2.py
2020/d04/: p1.py  p2.py
2020/d05/: p1.py  p2.py
2020/d06/: p1.py  p2.py
2020/d07/: p1.py  p2.py
2020/d08/: p1.py  p2.py
2020/d08/src/: __init__.py  game_console.py  program_state.py
2020/d09/: p1.py  p2.py
2020/d10/: p1.py  p2.py
2020/d11/: p1.py  p2.py
2020/d12/: p1.py  p2.py
2020/d13/: p1.py
2021/d01/: p1.py  p2.py
2021/d02/: directions.py  p1.py  p2.py
d01/: p1.py  p2.py
d02/: p2.py
d06/: p1.py
d07/: p1.py  p2.py
solution_runner/: cli.py  completion.py  consts.py  input_getter.py  modules_utils.py  utils.py
solution_runner/commands/: __init__.py  commands_utils.py  config_command.py  consts.py  defaults_and_choices.py  setup_command.py  solution_template.py  submit_command.py
tests/: test_d03p1.py  test_d04.py  test_d05.py
y2018/: d03.py  d04.py  d05.py
y2018/d01/: p1.py  p2.py
y2018/d02/: p1.py  p2.py
y2018/d06/: p1.py  p2.py
y2018/d07/: p1.py  p2.py
y2018/tests/: test_d03.py  test_d04.py  test_d05.py
(+73 files in other folders)
