[project]
name = "advent-of-code"
version = "0.1.0"
description = "Solution runner for Advent of Code"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "click==8.1.7",
    "gitpython>=3.1.47",
    "pygithub>=2.9.1",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "rich-click>=1.9.7",
    "tzdata>=2026.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["solution_runner"]

[project.scripts]
cli = "solution_runner.cli:cli"

[tool.uv]
package = true

[tool.ruff.lint]
extend-select = [
    "I", # isort (import sorting)
    "UP", # pyupgrade (modernize syntax)
    "B", # flake8-bugbear (catch common bugs)
    "SIM", # flake8-simplify (simplify code logic)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]